Change brand name from 'Analytics' to 'Konfetti'

--- a/public/admin.html
+++ b/public/admin.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="topbar">
-    <div class="brand">Analytics</div>
+    <div class="brand">Konfetti</div>
     <nav class="nav">
       <a class="nav-link active" href="/admin.html">Dashboard</a>
       <a class="nav-link" href="/registrations.html">Registrations</a>
